RTL Fixes, Smarter triangles, and Preselected defaults. * RTL doesn't flip the order of the banner components, and fit:true containers have widths that are properly calculated. * Triangles no longer inherit a margin they don't need. * Variable-ized the spacing in the header for easier consistency. * Default-selected english as the language. Enyo-DCO-1.1-Signed-off-by: Blake Stephens <blake.stephens@lge.com>

--- a/css/VideoInfoBackground.less
+++ b/css/VideoInfoBackground.less
@@ -3,20 +3,26 @@
 	white-space: nowrap;
 	&.left {
 		padding: 20px 20px 20px 60px;
-		> * {
+		> * + * {
 			margin-right: 40px;
 		}
 	}
 	&.right {
 		float: right;
 		padding: 20px 60px 20px 20px;
-		> * {
+		> * + * {
 			margin-left: 40px;
 		}
 	}
 }
-.enyo-locale-right-to-left .moon-background-wrapper-client-content > * {
-	direction: rtl;
+.enyo-locale-right-to-left {
+	.moon-background-wrapper-client-content {
+		direction: ltr;
+		> * {
+			direction: rtl;
+			text-align: right;
+		}
+	}
 }
 
 /* Angled edged corners rule-set */
